src/App.css
body {
  background-color: #e8e8d7;
}

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 100px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.refia_cute {
   margin-top: 50px;
   border-top: dashed 1px black;
   border-bottom: dashed 1px black;
   margin-bottom: 50px;
}

.exviusWikiContainer {
  display: flex;
  justify-content: center;
  background-color: #180e0d;
}

.exviusWikiImage {
  height: 120px;
}

.footer-credits {
  margin: 20px 0;
}

.bottom-padding {
  margin-bottom: 50px;
}

